Implemented structured logging

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^3.5.0",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.4",
     "mocha": "^3.3.0"
   }
