Logging infrastructure for adding username and useremail

--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^3.5.0",
-    "fs": "0.0.1-security",
-    "lodash": "^4.17.4",
-    "mocha": "^3.3.0"
+    "lodash": "^4.17.4"
   }
 }
