Added some more cool compiler features. Added a new lesson

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,5 +2,9 @@
     "compilerOptions": {
         "target": "es6",
         "allowSyntheticDefaultImports": true
-    }
+    },
+    "include": [
+        "src",
+        "typedefs"
+    ]
 }
