--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 {
 	// Support using flow through your node_modules folder, WARNING: Checking this box is a security risk. When you open a project we will immediately run code contained within it.
 	"flow.useNPMPackagedFlow": true,
+	"flow.runOnAllFiles": true,
 	// Enable/disable JavaScript validation. (For Flow)
 	"javascript.validate.enable": false,
 	// Enable/disable default JavaScript formatter (For Prettier)
